@@ -14,6 +14,8 @@
 		
 		endif; ?>
 		
+		<?php anderson_display_post_navigation(); ?>
+			
 		<?php anderson_display_related_posts(); ?>
 		
 		<?php comments_template(); ?>
