@@ -108,6 +108,35 @@ input, textarea, select {
 	max-width: 100%;
 }
 
+/* Text meant only for screen readers. */
+.screen-reader-text {
+	clip: rect(1px, 1px, 1px, 1px);
+	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
+}
+
+.screen-reader-text:focus {
+	background-color: #f1f1f1;
+	border-radius: 3px;
+	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+	clip: auto !important;
+	color: #21759b;
+	display: block;
+	font-size: 14px;
+	font-size: 0.875rem;
+	font-weight: bold;
+	height: auto;
+	left: 5px;
+	line-height: normal;
+	padding: 15px 23px 14px;
+	text-decoration: none;
+	top: 5px;
+	width: auto;
+	z-index: 100000; /* Above WP toolbar. */
+}
+
 /* Basic Structure 
 -------------------------------------------------------------- */
 #wrapper {
@@ -666,6 +695,30 @@ input, textarea, select {
 .post-pagination .current {
 	color: #dd2727;
 	border-top: 5px solid #dd2727;
+}
+
+/* Post Navigation */
+.post-navigation {
+	margin-bottom: 2em;
+	padding: 0.5em 0.8em 0.6em;
+	line-height: 1.5;
+	color: #222;
+	border-top: 1px solid #222;
+	border-bottom: 1px solid #222;
+}
+.post-navigation .nav-links:before,
+.post-navigation .nav-links:after {
+	content: "";
+	display: table;
+}
+.post-navigation .nav-links:after {
+	clear: both;
+}
+.post-navigation .nav-links .nav-previous {
+	float: left;
+}
+.post-navigation .nav-links .nav-next {
+	float: right;
 }
 
 /* Breadcrumbs */
